[package]
name = "base16-builder"
version = "0.1.0"
edition = "2024"
authors = ["Rotem Horesh <horesh.rotem@gmail.com"]
license = "MIT"

[dependencies]
mustache = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
